--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -1171,12 +1171,79 @@ The system will send to the user an error message and will redirect him in the s
 
 \end{longtable}
 
+\newpage
+
+\subsubsection{Sequence Diagrams}
+\begin{itemize}
+
+\item The first sequence diagram represents the registration process. The actors are the user (municipality or private one) and the system. 
+
+\begin{figure}[h]
+	\includegraphics[scale=0.365]{Sequence Diagrams/Sequence diagram sign-up.png}
+	\centering
+	\caption{First Sequence Diagram}
+\end{figure}
+\FloatBarrier 
+
+\newpage
+
+
+
+\item The second sequence diagram represents the log-in process. The actors are the user (municipality or private one) and the system. 
+
+\begin{figure}[h]
+	\includegraphics[scale=0.51]{Sequence Diagrams/Sequence diagram log-in.png}
+	\centering
+	\caption{Second Sequence Diagram}
+\end{figure}
+\FloatBarrier
+
+\newpage
+
+
+\item The third sequence diagram represents the violation reporting process. The actors are the private user that sends it, the system and the municipality that receives it.
+
+\begin{figure}[h]
+	\includegraphics[scale=0.51]{Sequence Diagrams/Sequence diagram violation.png}
+	\centering
+	\caption{Third Sequence Diagram}
+\end{figure}
+\FloatBarrier  
+
+
+\newpage
+
+
+\item The fourth sequence diagram represents process to make a request to the system. The actors are the user (private and municipality) and the system. The private user uses this process to request for the safest parking areas, the condition of the streets, the most reported streets and the most reported vehicles, while the municipality can make the request for the most reported vehicles and streets, the condition of an area and to receive suggestions for improvements.
+
+\begin{figure}[h]
+	\includegraphics[scale=0.51]{Sequence Diagrams/Sequence diagram request.png}
+	\centering
+	\caption{Fourth Sequence Diagram}
+\end{figure}
+\FloatBarrier 
+
+
+\newpage
 
 
 
 
 
+\item The fifth and last sequence diagram represents the process for changing the category of the private user. The actors are the private user that wants to change his category and the system.
 
+\begin{figure}[h]
+	\includegraphics[scale=0.51]{Sequence Diagrams/Sequence diagram change category.png}
+	\centering
+	\caption{Fifth Sequence Diagram}
+\end{figure}
+\FloatBarrier 
+
+
+\end{itemize}
+
+
+\newpage
 
 \subsubsection{Goal mapping on requirements:}
 \begin{itemize}
