--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -8,6 +8,9 @@
 \usepackage{float}
 \usepackage{placeins}
 \usepackage{longtable}
+\usepackage[dvipsnames]{xcolor}
+\usepackage{listings}
+\usepackage{alloy-style}
 
 
 
