update pdf quality

--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -12,6 +12,7 @@
 \usepackage{listings}
 \usepackage{alloy-style}
 \usepackage{blindtext, rotating}
+\pdfcompresslevel0
 
 
 \author{Luca Massini \and Daniele Nicolò}
