--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -377,7 +377,11 @@ Furthermore, the application can encounter:
 	\item $[\textbf{D5}]$: The memory where the data is stored is persistent.
 	\item$[\textbf{D6}]$: The user allows the app to have access to his/her position and the camera of his/her device.
 	\item $[\textbf{D7}]$: The internet connection has to be enabled when the app needs it.
-	\item $[\textbf{D8}]$; The municipality must provide the reports (sent by the users) to the authorities automatically.
+	\item $[\textbf{D8}]$: The municipality must provide the reports (sent by the users) to the authorities automatically.
+	\item $[\textbf{D9}]$: The email identifies uniquely a private user.
+	\item $[\textbf{D10}]$: The fiscal code identify uniquely a person.
+	\item $[\textbf{D11}]$: It is impossible that 2 roads that are in the same city have also the same name.
+	\item $[\textbf{D12}]$: A street can be identified with its name and the city of which it belongs.
 	
 \end{itemize}
 \subsubsection{Constraints: }
@@ -1283,10 +1287,12 @@ The system will send to the user an error message and will redirect him in the s
  	\item $[R6]:$ The system can localize his position automatically as alternative to the manual insertion.
  	\item $[R7]:$ The system must allow the user to finally submit the report.
  	\item $[R8]:$ The system must run an algorithm to retrieve the license plate from the violation picture.
+ 	\item $[R30]:$ The chosen username must identify the private user uniquely.
  	\item $[D4]:$ The GPS signal has a relative error of 10 meters.
  	\item $[D6]:$ The user allows the application to have access to his/her position and to the camera of his/her device.
  	\item $[D7]:$ The internet connection has to be enabled when the app needs it.
  	\item $[D8]:$ The municipality must provide the reports (sent by the users) to the authorities automatically.
+
  	
  \end{itemize}
  \item $[G2]:$ The service allows the users to have detailed informations about the violations and the streets safety.
@@ -1333,11 +1339,14 @@ The system will send to the user an error message and will redirect him in the s
  \item $[R24]:$ The system must allow the municipality to sign-up if and only if they insert a valid ID code.
  \item $[R25]:$ The system must allow the user (both private user and the municipality) to sign-up if and only if he inserts a username that is not already used.
  \item $[R26]:$ The system must allow the user (both private user and the municipality) to sign-up if and only if he inserts a password that complies the security policy.
+ \item $[R30]:$ The chosen username must identify the private user uniquely.
  \item $[D1]:$ The user is supposed to submit correct e-mail, and data matching his/her FC.
  \item $[D2]:$ The user creates one and only one account.
  \item $[D3]:$ Every municipality which has an account on the system certifies its own account as valid.
  \item $[D5]:$ The memory where the data is stored is persistent.
  \item $[D7]:$ The internet connection has to be enabled when the app needs it.
+ \item $[D9]$: The email identifies uniquely a private user.
+	\item $[D10]$: The fiscal code identify uniquely a person.
  \end{itemize}
  
  
@@ -1345,6 +1354,7 @@ The system will send to the user an error message and will redirect him in the s
  \begin{itemize}
  \item $[R27]:$ The system must allow the user to recover his password if he/she has forgotten it.
  \item $[R28]:$ The system must allow the municipality users and the private ones to access the corresponding Home Page after the log-in.
+ \item $[R30]:$ The chosen username must identify the private user uniquely.
  \item $[D7]:$ The internet connection has to be enabled when the app needs it.
  \end{itemize}
  
@@ -1360,8 +1370,8 @@ The system will send to the user an error message and will redirect him in the s
 +
 \subsection{Performance Requirements}
 
-In this part we will indicate the performance requirements of SafeStreets. From the static point of view, our application supports up to 10 millions accounts. The constraint is physical because it concerns the memory of our database. When the maximum is reached the system will use a FIFO policy so the first data inserted will be deleted.
-From the dynamic point of view we need that the information about streets, violations and vehicles is send and updated quite fast, so the violations are sent to the municipality in maximum 30 minutes from when they have been reported by a user, while the maps that show the safest area and parking areas have to be updated in maximum 1 hour. Same thing for the reported vehicles.
+In this part we will indicate the performance requirements of SafeStreets. Our application will use cloud databases running in a cloud computing platform purchased from third parties. This choice was made to try to increase the elasticity on the number of requests. In fact, through this approach it is possible to balance the requests during the service. It is possible to decrease resources when the load is low and to increase them when it is high.\\
+From the dynamic point of view we need that the information about streets, violations and vehicles is send and updated quite fast, so the violations are sent to the municipality in maximum 10 minutes from when they have been reported by a user, while the maps that show the safest area and parking areas have to be updated in maximum 1 hour. Same thing for the reported vehicles.
 The requests from municipality and private users have to be processed in less than 5 seconds, in order to provide a fast service.
 
 
@@ -1388,7 +1398,7 @@ The Reliability of the system must be high, because the system has to provide to
 
 
 \subsubsection{Availability}
-The system, in order to provide an efficient service, must be available at a very high level. We think that it must have the target value of 90\%, because we want that the app will be available to every type of people in any moment. 
+The system, in order to provide an efficient service, must be available at a good level. We think that it must have the target value of 95\%, because we want that the app will be sufficiently available to every user.
 
 \subsubsection{Security}
 The security is fundamental in our system, as it contains the users' sensitive data. In particular:
@@ -1459,8 +1469,7 @@ In this world we will show a complete view of the system in his completeness. Ev
 \end{figure}
 \FloatBarrier
 
-<<<<<<< HEAD
-=======
+
 \begin{figure}[h]
 	\paragraph{Consistency:}
 	\includegraphics[scale=1.168]{Alloy images/Consistency of the model.png}
@@ -1468,8 +1477,31 @@ In this world we will show a complete view of the system in his completeness. Ev
 	\caption{Consistency}
 \end{figure}
 \FloatBarrier
-
->>>>>>> f389f7a4f49e00d7096db5591507d5e75338bdac
+\newpage
+\section{Effort:}
+\begin{longtable}{| p{12 cm} | p{2 cm} |} 
+		\hline
+		{\bf Task} & {\bf Hours}\\
+		\hline
+		 Git setup & 1 \\
+		 Group work on chapter 1 & 3 \\
+		 Writing in latex of sections 1.1 and 1.2 (purpose and scope) (already done in group) & 2 \\
+		 Section 2.1 & 2,5 \\
+		 State chart diagram & 1 \\
+		 Section 2.2 (Product functions) & 2 \\
+		 Half of section 2.3 (User characteristics) & 2 \\
+		 Half of section 2.4 & 2 \\
+		 Section 3.1 & 2\\
+		 Use case diagrams & 3 \\
+		 Scenarios & 3 \\
+		 Alloy & 15\\
+		\hline
+		&  {\bf Total} \\
+		\hline
+		&  38.5 \\
+		\hline
+		\caption{Luca massini's effort}
+	\end{longtable}
 
 \end{document}
 
