Added also mockups to effort

--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -1493,12 +1493,13 @@ In this world we will show a complete view of the system in his completeness. Ev
 		 Half of section 2.4 & 2 \\
 		 Section 3.1 & 2\\
 		 Use case diagrams & 3 \\
+		 Mockups & 6\\
 		 Scenarios & 3 \\
 		 Alloy & 15\\
 		\hline
 		&  {\bf Total} \\
 		\hline
-		&  38.5 \\
+		&  44.5 \\
 		\hline
 		\caption{Luca massini's effort}
 	\end{longtable}
