--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -1496,12 +1496,41 @@ In this world we will show a complete view of the system in his completeness. Ev
 		 Mockups & 6\\
 		 Scenarios & 3 \\
 		 Alloy & 15\\
+		 Chapter 4 review & 3\\
 		\hline
 		&  {\bf Total} \\
 		\hline
-		&  44.5 \\
+		&  47.5 \\
 		\hline
-		\caption{Luca massini's effort}
+		\caption{Luca Massini's effort}
+	\end{longtable}
+	
+	
+	
+	\begin{longtable}{| p{12 cm} | p{2 cm} |} 
+		\hline
+		{\bf Task} & {\bf Hours}\\
+		\hline
+		 Git setup & 1 \\
+		 Group work on chapter 1 & 3 \\
+		 Sections 1.3, 1.4, 1.5 & 1 \\
+		 Section 1.6 & 1 \\
+		 Section 2.1.1 (class diagrams) & 2\\ 
+		 Half of section 2.3 (User characteristics) & 2 \\
+		 Half of section 2.4 & 2 \\
+		 Review of chapters 1 and 2 & 5 \\
+		 Section 3.1 (Mockups insertion in latex and description) & 7\\
+		 Use cases tables & 8 \\
+		 Sequence diagrams & 8 \\
+		 Section 3.2.5 & 3 \\
+		 Sections 3.3, 3.4, 3.5 & 1.5 \\
+		 Chapter 3 review & 2 \\
+		\hline
+		&  {\bf Total} \\
+		\hline
+		&  46.5 \\
+		\hline
+		\caption{Daniele Nicolò's effort}
 	\end{longtable}
 
 \end{document}
