--- a/DD/DD.tex
+++ b/DD/DD.tex
@@ -1,7 +1,11 @@
 \documentclass[titlepage]{article}
 \usepackage[T1]{fontenc}
 \usepackage[utf8x]{inputenc}
+\usepackage{placeins}
+\usepackage{graphicx}
 \usepackage[english]{babel}
+
+
 \author{Luca Massini \and Daniele Nicolò}
 
 \title{Design Document
@@ -41,5 +45,18 @@ The following sections are structured as below:
 	\item \textbf{Implementation, Integration and Test plan:} Here there is the description of how we will implement all the components, how we will integrate them together and finally how we will test both the single components and also the integrated system.
 	\item \textbf{Effort spent:} Here there is the division of the work hours of each member of the group and the description of the tasks completed and related time spent.
 \end{itemize}
-	
+\section{Architectural Design}
+\subsection{Overview}
+In the figure below it is shown the architecture of the entire system. This description has to be intended only as an overview and because of this some details are not shown.
+\begin{figure}[h]
+	\includegraphics[scale=0.465]{Diagrams/overview.png}
+	\caption{Architectural overview}
+\end{figure}
+\FloatBarrier In this system we have two clusters of servers and two types of servers. One is specialized in taking the requests that comes from outside the network whereas the other one is specialized in managing the reports that comes from the private users. Obviously it is necessary to define what we mean by request and reports.In this case a report for us is a report of a violation sent via smartphone application to the system. Instead, a request is any possible thing that the the private user/municipality user can ask to the system to do. Obviously a request cannot be a violation report and the other way around.\\
+ The load of requests is managed by  he load balancer in order to guarantee a balanced load. The balanced load can be translated then in a better efficiency in the service. In fact thanks to duplication of components it is possible to satisfy requests in parallel and so faster. The redundancy of resources can make the system more fault tolerant.\\
+ Both the clusters communicate to the database of the application. In particular the servers devoted to requests interact also with the database of the municipality to have information about the accidents. Thanks to this action it is possible to have more detailed information about the safety.\\
+The storage is managed in a cloud computing approach. Thanks to this type of approach it is possible to reduce or increase resources according to the number of request in a specific moment. This is very important in order guarantee elasticity in the resources devoted to the service.\\ 
+
+\subsection{Component view}
+Here there is the description of the software components that will be implemented in the specific hardware.
 \end{document}
